Revert "Remove extra blazor server project."
This reverts commit cc2ca3c42d3edeb5db7d41139bd4f6ed42dc4818.

--- a/Dev-Blog/DevBlog_BlazorServer/Pages/AddPost.razor
+++ b/Dev-Blog/DevBlog_BlazorServer/Pages/AddPost.razor
@@ -4,7 +4,10 @@
 @using Microsoft.Extensions.Configuration
 @using System.IO
 @using Microsoft.AspNetCore.Http
+@using Dropbox.Api;
+@using Dropbox.Api.Files
 
+@inject DataLibrary.Interfaces.IDataAccess _data
 @inject IConfiguration _config
 
 <h3>AddPost</h3>
