--- a/Dev-Blog/BlazorServer/Pages/Posts.razor
+++ b/Dev-Blog/BlazorServer/Pages/Posts.razor
@@ -1,36 +1,44 @@
 ﻿@page "/posts"
 
 @using BlazorServer.Models
-@inject BlazorServer.Interfaces.IPosts _posts
+@using Microsoft.EntityFrameworkCore
+@inject BlazorServer.Data.AppDbContext db
 
-@foreach (var post in posts)
+@if (posts == null)
 {
-    <!-- Render Posts -->
-    <div style="margin-top: 20px; border: 2px solid red;">
-        <p>@post.UpdateNum</p>
-        <p>@post.Date.ToShortDateString()</p>
-        <img src=@post.ImgURL />
-        <p>@post.Description</p>
-        <button class="glyphicon glyphicon-thumbs-up"></button>
-        <span>@post.UpVotes</span>
-        <button class="glyphicon glyphicon-thumbs-down"></button>
-        <span>@post.DownVotes</span>
+    <p>Loading...</p>
+}
+else
+{
+    @foreach (var post in posts)
+    {
+        <!-- Render Posts -->
+        <div style="margin-top: 20px; border: 2px solid red;">
+            <p>@post.UpdateNum</p>
+            <p>@post.Date.ToShortDateString()</p>
+            <img src=@post.ImgURL />
+            <p>@post.Description</p>
+            <button class="glyphicon glyphicon-thumbs-up"></button>
+            <span>@post.UpVotes</span>
+            <button class="glyphicon glyphicon-thumbs-down"></button>
+            <span>@post.DownVotes</span>
 
-        <!-- Render Comments -->
-        <div>
-            @if (post.Comments[0] != null)
-            {
-                foreach (var comment in post.Comments)
+            <!-- Render Comments -->
+            <div>
+                @if (post.Comments != null)
                 {
-                    <span>@comment.UserName</span>
-                    <span>
-                        @comment.Date.ToString("MM/dd/yyyy hh:mm tt")
-                    </span>
-                    <p>@comment.Content</p>
+                    foreach (var comment in post.Comments)
+                    {
+                        <span>@comment.UserName</span>
+                        <span>
+                            @comment.Date.ToString("MM/dd/yyyy hh:mm tt")
+                        </span>
+                        <p>@comment.Content</p>
+                    }
                 }
-            }
+            </div>
         </div>
-    </div>
+    }
 }
 
 @code {
@@ -38,6 +46,6 @@
 
     protected override async Task OnInitializedAsync()
     {
-        posts = await _posts.GetPosts();
+        posts = await db.Post.ToListAsync();
     }
 }
