--- a/Dev-Blog/BlazorServer/Shared/MainLayout.razor
+++ b/Dev-Blog/BlazorServer/Shared/MainLayout.razor
@@ -1,16 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
+<div>
+    <header>
         <NavMenu />
-    </div>
+    </header>
 
     <div class="main">
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <div class="content px-4">
+        <div>
             @Body
         </div>
     </div>
