--- a/Dev-Blog/BlazorServer/Pages/_Host.cshtml
+++ b/Dev-Blog/BlazorServer/Pages/_Host.cshtml
@@ -12,9 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorServer</title>
     <base href="~/" />
+    @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+        <link href="BlazorServer.styles.css" rel="stylesheet" />*@
     <link href="css/Reset.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="BlazorServer.styles.css" rel="stylesheet" />
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
