--- a/Dev-Blog/BlazorServer/Shared/NavMenu.razor
+++ b/Dev-Blog/BlazorServer/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity;
-@inject AuthenticationStateProvider Auth
+﻿@inject AuthenticationStateProvider Auth
+@inject NavigationManager navMgr
 
 <nav>
     <!-- LOGO -->
@@ -36,21 +36,21 @@
                         </NotAuthorized>
                     </AuthorizeView>*@
 
-                if (authorized)
+                if (authenticated)
                 {
                     <!-- WELCOME USER -->
                     <NavLink>
-                        @*<a class="nav-link disabled">Welcome @User.Claims.First(x => x.Type == "UserName").Value </a>*@
-                        <a>Welcome USER</a>
+                        <a>Welcome @username</a>
                     </NavLink>
 
                     <!-- LOGOUT -->
-                    <NavLink href="/Account/Logout">
-                        <EditForm asp-page="/Account/Logout" method="post">
-                            <button type="submit">Logout</button>
-                        </EditForm>
+                    <NavLink>
+                        <form style="display : inline;" method="post" action="/signout">
+                            <input type="submit" value="sign out" />
+                        </form>
                     </NavLink>
                 }
+
                 <!-- LOGIN / SIGN UP -->
                 else
                 {
@@ -71,57 +71,21 @@
     </div>
 </nav>
 
-@*<div class="top-row pl-4 navbar navbar-dark">
-        <a class="navbar-brand" href="">DevBlog_BlazorServer</a>
-        <button class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>*@
-
-@*<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-        <ul class="nav flex-column">
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                    <span class="oi oi-home" aria-hidden="true"></span> Home
-                </NavLink>
-            </li>
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="counter">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
-                </NavLink>
-            </li>
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-                </NavLink>
-            </li>
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="people">
-                    <span class="oi oi-person" aria-hidden="true"></span>People
-                </NavLink>
-            </li>
-        </ul>
-    </div>*@
-
 @code {
-    @*private bool collapseNavMenu = true;*@
-    @*private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;*@
-    private bool authorized;
+    private bool authenticated;
+    private string username;
 
     protected override async Task OnInitializedAsync()
     {
-        authorized = GetAuthState().Result;
+        authenticated = GetAuthState().Result;
     }
 
     public async Task<bool> GetAuthState()
     {
         var authState = await Auth.GetAuthenticationStateAsync();
         var user = authState.User;
+        username = user.Identity.Name;
         return user.Identity.IsAuthenticated ? true : false;
     }
 
-    @*private void ToggleNavMenu()
-        {
-            collapseNavMenu = !collapseNavMenu;
-        }*@
 }
