--- a/Dev-Blog/BlazorServer/Pages/Posts.razor
+++ b/Dev-Blog/BlazorServer/Pages/Posts.razor
@@ -29,7 +29,8 @@ else
             {
                 var editUrl = $"/editpost/{post.Id}/";
                 <NavLink href=@editUrl>
-                    Edit Post
+                    <EditIcon></EditIcon>
+                    @*Edit Post*@
                 </NavLink>
             }
 
